添加用户状态限制
